# psh

./: .clippy.toml  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  get_sysinfo.sh  install.sh  musl-binary-build.sh  wit
.github/actions/audit/: action.yml
.github/actions/check/: action.yml
.github/actions/clippy/: action.yml
.github/actions/make-archive/: action.yml
.github/actions/rustfmt/: action.yml
.github/actions/show-env/: action.yml
.github/actions/test/: action.yml
.github/workflows/: audit.yml  build-check.yml  build-dev.yml  build-release.yml  build.yml  clippy.yml  rustfmt.yml  test.yml
crates/ebpf/: Cargo.toml
crates/ebpf/src/: lib.rs
crates/op/host-op-ebpf/: Cargo.toml
crates/op/host-op-perf/: Cargo.toml  build.rs  wit
crates/op/host-op-perf/src/: lib.rs
crates/op/host-op-perf/src/convert/: config.rs  cpu.rs  event.rs  event_scope.rs  extra_config.rs  mod.rs  process.rs  sample_record.rs  stat.rs
crates/op/host-op-perf/src/counting/: mod.rs
crates/op/host-op-perf/src/counting/group/: mod.rs  raw.rs
crates/op/host-op-perf/src/counting/single/: mod.rs  raw.rs
crates/op/host-op-perf/src/sampling/: mod.rs
crates/op/host-op-perf/src/tests/: counter.rs  counter_group.rs  mod.rs
crates/op/host-op-system/: Cargo.toml  wit
crates/op/host-op-system/src/: lib.rs
crates/op/host-op-system/src/cpu/: host.rs  mod.rs  raw.rs
crates/op/host-op-system/src/disk/: host.rs  mod.rs
crates/op/host-op-system/src/interrupt/: host.rs  irq.rs  mod.rs  stat.rs
crates/op/host-op-system/src/interrupts/: host.rs  irq.rs  mod.rs  raw.rs  stat.rs
crates/op/host-op-system/src/memory/: host.rs  mem_info.rs  memory_module.rs  mod.rs  raw.rs
crates/op/host-op-system/src/network/: host.rs  mod.rs
crates/op/host-op-system/src/os/: host.rs  mod.rs  raw.rs
crates/op/host-op-system/src/process/: host.rs  mod.rs
crates/op/host-op-system/src/rps/: host.rs  mod.rs  raw.rs
crates/op/host-op-system/src/utils/: mod.rs
crates/op/host-op-system/src/vmstat/: mod.rs
crates/op/host-op-system/tests/: mod.rs
crates/psh-system/: Cargo.toml
crates/psh-system/examples/: example.rs
crates/psh-system/src/: error.rs  lib.rs
crates/psh-system/src/cpu/: handle.rs  mod.rs  raw.rs
crates/psh-system/src/disk/: handle.rs  mod.rs
crates/psh-system/src/gpu/: handle.rs  mod.rs  raw.rs
crates/psh-system/src/interrupt/: handle.rs  irq.rs  mod.rs  raw.rs  stat.rs
crates/psh-system/src/memory/: handle.rs  mem_info.rs  memory_module.rs  mod.rs  raw.rs
crates/psh-system/src/network/: handle.rs  mod.rs  raw.rs
crates/psh-system/src/os/: handle.rs  mod.rs  raw.rs
crates/psh-system/src/process/: global.rs  handle.rs  mod.rs
crates/psh-system/src/rps/: handle.rs  mod.rs  raw.rs
crates/psh-system/src/utils/: mod.rs
crates/psh-system/src/vmstat/: handle.rs  mod.rs
crates/psh-system/test_resources/arch/x86_64/intel/: cpuinfo
crates/psh-system/test_resources/arch/x86_64/intel/irq/1/: affinity_hint
doc/: config.toml
docker/aarch64-unknown-linux-musl/: Dockerfile
docker/x86_64-unknown-linux-musl/: Dockerfile
examples/wasi/get_cpu_info/: Cargo.toml
examples/wasi/get_disks/: Cargo.toml  build.rs
examples/wasi/get_interrupts_info/: Cargo.toml
examples/wasi/get_interrupts_info/src/: main.rs
examples/wasi/get_memory_info/: Cargo.toml
examples/wasi/get_networks/: Cargo.toml
examples/wasi/get_processes/: Cargo.toml
examples/wasi/get_rps_info/: Cargo.toml  build.rs
examples/wasi/get_system_info/: Cargo.toml
psh-system/: Cargo.toml
psh-system/examples/: example.rs
psh-system/src/: error.rs  lib.rs
psh-system/src/cpu/: global.rs  raw.rs
psh-system/src/disk/: global.rs  mod.rs
psh-system/src/interrupt/: global.rs  mod.rs  stat.rs
psh-system/src/memory/: global.rs  memory_module.rs  raw.rs
psh-system/src/os/: global.rs
psh-system/src/process/: mod.rs
psh-system/src/rps/: global.rs  mod.rs  raw.rs
psh-system/src/utils/: mod.rs
scripts/: build-test-resources.sh
service/: psh.service
src/: args.rs  cmd.rs  config.rs  daemon.rs  file.rs  lib.rs  log.rs  main.rs  utils.rs
src/args/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/infra/: mod.rs  option.rs  result.rs  util.rs
src/log/: mod.rs
src/op/: mod.rs
src/op/common/: cpu_info.rs  interrupts.rs  irq.rs  mem_info.rs  memory_module.rs  mod.rs  rps.rs  system.rs  utils.rs
src/otlp/: config.rs  mod.rs
src/otlp/gauges/: cpu.rs  disk.rs  gpu.rs  interrupt.rs  memory.rs  mod.rs  network.rs  rps.rs  vmstat.rs
src/resources/: mod.rs
src/runtime/: builder.rs  data_export.rs  engine.rs  mod.rs
src/runtime/builder/: mod.rs
src/runtime/engine/: mod.rs
src/runtime/state/: mod.rs
src/runtime/tests/: mod.rs
src/security/: mod.rs
src/services/: config.rs  host_info.rs  mod.rs  rpc.rs
src/utils/: mod.rs
test_resources/: meminfo-hed-off-cma-on  meminfo-hed-on-cma-off
test_resources/profiling/test-export-file/: Cargo.toml
test_resources/profiling/test-export-measurement/: Cargo.toml
test_resources/profiling/test-export-measurement/src/: main.rs
test_resources/profiling/test-export-metric/: Cargo.toml  build.rs
test_resources/profiling/test-get-disks/: Cargo.toml
test_resources/profiling/test-get-disks/src/: main.rs
test_resources/profiling/test-get-interrupts-info/: Cargo.toml  build.rs
test_resources/profiling/test-get-interrupts-info/src/: main.rs
test_resources/profiling/test-get-networks/: Cargo.toml
test_resources/profiling/test-get-networks/src/: main.rs
test_resources/profiling/test-get-processes/: Cargo.toml
test_resources/profiling/test-get-processes/src/: main.rs
test_resources/profiling/test-get-system-info/: Cargo.toml
test_resources/profiling/test-get-system-info/src/: main.rs
test_resources/profiling/test-perf-counter/: Cargo.toml  build.rs
test_resources/profiling/test-perf-counter/src/: main.rs
test_resources/profiling/test-perf-counter/wit/: deps  world.wit
test_resources/profiling/test-vmstat/: Cargo.toml  build.rs
test_resources/profiling/test-vmstat/src/: main.rs
(+47 files in other folders)
