[package]
name = "psh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/op/*", "crates/psh-system", "crates/ebpf"
]
exclude = ["test_resources/profiling"]

[workspace.package]
version = "0.1.0"

[dependencies]
libc = "0.2.155"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
nix = { version = "0.29.0", features = ["user"] }
wasmtime = "21.0.1"
wasmtime-wasi = "21.0.1"
wit-bindgen = "0.26.0"
anyhow = "1.0.86"
host-op-perf = { workspace = true }
host-op-system = { workspace = true }
psh-system = { workspace = true }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "opentelemetry-http", "http-proto", "reqwest", "reqwest-blocking-client"] }
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["metrics", "opentelemetry-http", "rt-tokio", "tokio"] }

[workspace.dependencies]
host-op-perf = { path = "crates/op/host-op-perf" }
host-op-system = { path = "crates/op/host-op-system" }
psh-system = { path = "crates/psh-system" }

[build-dependencies]
tonic-build = "0.11"
