[package]
name = "psh"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/op/*", "crates/psh-system"]
exclude = ["test_resources/profiling"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
tonic = { workspace = true, features = ["tls-roots"] }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
nix = { workspace = true, features = ["user", "hostname"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
host-op-perf = { workspace = true }
host-op-system = { workspace = true }
psh-system = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
  "metrics",
  "tls-roots",
  "opentelemetry-http",
  "http-proto",
  "reqwest",
  "reqwest-blocking-client",
] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = [
  "metrics",
  "opentelemetry-http",
  "rt-tokio",
  "tokio",
] }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
daemonize = { workspace = true }
local-ip-address = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[workspace.dependencies]
host-op-perf = { path = "crates/op/host-op-perf" }
host-op-system = { path = "crates/op/host-op-system" }
psh-system = { path = "crates/psh-system" }
perf-event-rs = { git = "https://github.com/OptimatistOpenSource/perf-event-rs.git", rev = "423ca26f53b27193d2321028dae5fd362a9673e9" }
tokio = "^1"
libc = "^0.2"
chrono = "^0.4"
nix = "^0.29"
clap = "^4"
opentelemetry-otlp = "^0.25"
opentelemetry = "^0.25"
opentelemetry_sdk = "^0.25"
tonic = "^0.12"
tonic-build = "0.12"
prost = "^0.13"
wasmtime = "^21"
wasmtime-wasi = "^21"
anyhow = "^1"
thiserror = "^1"
wit-bindgen = "^0.26"
daemonize = "^0.5"
tracing = "^0.1"
tracing-subscriber = "^0.3"
toml = "^0.8"
serde = "^1"
once_cell = "^1"
procfs = "^0.16"
uname = "^0.1"
which = "^6"
num_cpus = "^1"
local-ip-address = "^0.6"
