[package]
name = "psh"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/op/*", "crates/psh-system"]
exclude = ["test_resources/profiling"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
tonic = { workspace = true, features = ["tls-roots"] }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
nix = { workspace = true, features = ["user", "hostname"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
host-op-perf = { workspace = true }
host-op-system = { workspace = true }
psh-system = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
  "metrics",
  "tls-roots",
  "opentelemetry-http",
  "http-proto",
  "reqwest",
  "reqwest-blocking-client",
] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = [
  "metrics",
  "opentelemetry-http",
  "rt-tokio",
  "tokio",
] }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
daemonize = { workspace = true }
local-ip-address = { workspace = true }
TinyUFO = { workspace = true }
crossbeam = { workspace = true }
influxdb-line-protocol = { workspace = true }
psh-proto = { workspace = true }
tikv-jemallocator = { workspace = true }

[lints]
workspace = true

[workspace.dependencies]
host-op-perf = { path = "crates/op/host-op-perf" }
host-op-system = { path = "crates/op/host-op-system" }
psh-system = { path = "crates/psh-system" }
perf-event-rs = { git = "https://github.com/OptimatistOpenSource/perf-event-rs.git", rev = "423ca26f53b27193d2321028dae5fd362a9673e9" }
tokio = "^1"
libc = "^0.2"
chrono = "^0.4"
nix = "^0.29"
clap = "^4"
opentelemetry-otlp = "^0.27"
opentelemetry = "^0.27"
opentelemetry_sdk = "^0.27"
tonic = "^0.12"
prost = "^0.13"
wasmtime = "^28"
wasmtime-wasi = "^28"
wit-bindgen = "^0.37"
anyhow = "^1"
thiserror = "^2"
daemonize = "^0.5"
tracing = "^0.1"
tracing-subscriber = "^0.3"
toml = "^0.8"
serde = "^1"
procfs = "^0.17"
uname = "^0.1"
which = "^7"
num_cpus = "^1"
local-ip-address = "^0.6"
TinyUFO = "0.4"
crossbeam = "0.8"
influxdb-line-protocol = "2"
psh-proto = { git = "https://github.com/OptimatistOpenSource/psh-proto.git", rev = "7aff49c162fdb318e81c6ab51143b74062e91505" }
tikv-jemallocator = "0.6"

[workspace.lints.rust]

[workspace.lints.clippy]
perf = { level = "deny", priority = -1 }

### nursery group
nursery = { level = "warn", priority = -1 }
trivial_regex = "allow"                     # see: https://github.com/rust-lang/rust-clippy/issues/6690
