[package]
name = "psh-system"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
procfs = { workspace = true }
thiserror = { workspace = true }
uname = { workspace = true }
which = { workspace = true }

[dev-dependencies]
num_cpus = { workspace = true }
