[package]
name = "host-op-system"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "21.0.1"
anyhow = "1.0.86"
wasmtime-wasi = "21.0.1"
psh-system = { version = "0.1.0", path = "../../psh-system" }
