[package]
name = "host-op-system"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "22.0.0"
anyhow = "1.0.86"
wasmtime-wasi = "22.0.0"
psh-system = { version = "0.1.0", path = "../../psh-system" }
