[package]
name = "host-op-system"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { workspace = true }
anyhow = { workspace = true }
psh-system = { workspace = true }

[lints]
workspace = true
