[package]
name = "test-get-interrupts-info"
edition = "2021"
version.workspace = true

[package.metadata.component]
package = "component:test-get-interrupts-info"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.22.0", default-features = false, features = ["realloc"] }
