[package]
name = "test-get-processes"
version = "0.0.0"
edition = "2021"

[package.metadata.component]
package = "component:test-get-processes"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.37.0", default-features = false, features = ["realloc"] }
