[package]
name = "test-get-system-info"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:test-get-system-info"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.20.0", default-features = false, features = ["realloc"] }
