[package]
name = "test-perf-counter"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[package.metadata.component]
package = "psh:profiling"

[package.metadata.component.target.dependencies]
"profiling:perf" = { path = "wit/deps/perf" }

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
wit-bindgen = { version = "0.19.1", default-features = false, features = ["realloc"] }
